--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/dmrtd"]
-	path = lib/dmrtd
-	url = https://github.com/ZeroPass/dmrtd.git
+[submodule "lib/eosdart"]
+	path = lib/eosdart
+	url = https://github.com/ZeroPass/eosdart.git
