--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,8 @@ dependencies:
   meta: ^1.1.8
   shared_preferences: ^2.0.4
   another_flushbar: ^1.10.28
-  eosdart: ^0.4.8
+  eosdart:
+    path: lib/eosdart
   logging: ^1.0.1
   f_logs: ^2.0.0-alpha-01
   share: ^2.0.1
@@ -69,6 +70,7 @@ dependencies:
   rive: ^0.8.1
   package_info_plus: ^1.4.1
   flutter_nfc_kit: ^3.3.1
+  flutter_document_reader_api: ^6.2.0
 
 flutter_icons:
   ios: true
