--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   package_info_plus: ^1.4.1
   flutter_nfc_kit: ^3.3.1
   flutter_document_reader_api: ^6.2.0
+  idenfy_sdk_flutter: ^2.0.7
 
 flutter_icons:
   ios: true
